--- a/app/globals.css
+++ b/app/globals.css
@@ -60,6 +60,16 @@
 }
 /* ====================================== */
 
+.glassmorphism {
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 0px;
+    /* border: 1px solid rgba(255, 255, 255, 0.18); */
+}
+
+/* ====================================== */
 @layer base {
     :root {
         --background: 0 0% 100%;
@@ -126,9 +136,9 @@
 
 @layer base {
     * {
-        @apply border-border;
+        /* @apply border-border; */
     }
     body {
-        @apply bg-background text-foreground;
+        /* @apply bg-background text-foreground; */
     }
 }
