--- a/app/globals.css
+++ b/app/globals.css
@@ -65,7 +65,7 @@
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    border-radius: 0px;
+    /* border-radius: 0px; */
     /* border: 1px solid rgba(255, 255, 255, 0.18); */
 }
 
