--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,13 @@
     .h-lvh {
         height: 100lvh;
     }
+
+    .text-normal {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22.4px;
+        text-align: left;
+    }
 }
 
 /* Clerk components */
